--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -51,7 +51,7 @@ jobs:
     steps:
     - uses: actions/download-artifact@v4
       with:
-        name: build
+        name: windowsBuild
         path: export
     - name: Display structure of downloaded files
       run: ls -R export
