--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 export/*
+.vscode/*
+.haxelib/
+.github/
+*.code-workspace
+vs_Community.exe
+# Local history which shouldn't be shared.
+.history
+.ionide
